--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
-          build_dir: _build
+          build_dir: _build/html
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
